--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,9 +11,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -24,3 +22,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+  
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Service test
+      run: |
+        pip install pytest
+        pytest test.py
