--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,4 +22,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        ls
+        pip install pytest
+        pytest test.py
+    - name: Service test
+      run: |
+        pip install pytest
+        pytest test.py
