--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,8 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          export PYTHONPATH=/home-sync
       - name: Service test
         run: |
-          pip install pytest
+          export PYTHONPATH=$(pwd)
           pytest tests/test.py -v
